Before combining reduction and everything else
before combination of transforms

--- a/1uzd.html
+++ b/1uzd.html
@@ -9,13 +9,15 @@
 		<canvas id="myCanvas" width="500" height="500" style="border: 1px solid black">
 			Your browser does not support the canvas tag.
 		</canvas>
-		<canvas id="myCanvas2" width="500" height="500">
+		<canvas id="myCanvas2" width="500" height="500" style="border: 1px solid black">
 			Your browser does not support the canvas tag.
 		</canvas>
 		<button onclick="firstStep()"> 1st Transformation </button>
 		<button onclick="secondStep()"> 2nd Transformation </button>
 		<button onclick="thirdStep()"> 3rd Transformation </button>
 		<button onclick="fourthStep()"> 4th Transformation </button>
+		<button onclick="clearCanvas2()"> Empty </button>
+		<button onclick="resetScale()"> Reset Scale </button>
 
 		<script src="code.js">
 		</script>
